sorting alignment issue has  been fixed in allocation module and customer module

--- a/src/app/view/customer/customer-layout/customer-bulk-sort/customer-bulk-sort.component.css
+++ b/src/app/view/customer/customer-layout/customer-bulk-sort/customer-bulk-sort.component.css
@@ -33,3 +33,10 @@ mat-list-item:hover{
 }
 
 
+
+.dropdown-menu.show{
+  position: absolute;
+  inset: 0px auto auto 0px;
+  margin: 0px;
+  transform: translate(5%, 0px) !important;
+}
